# capture

./: .gitattributes  Cargo.toml  README.md
examples/: all.rs  capture.rs  controller.rs  engine.rs  grab.rs  record.rs  recorder.rs
src/: capturer.rs  config.rs  controller.rs  format.rs  frame.rs  lib.rs  monitor.rs  recorder.rs  utils.rs
src/engine/: macos.rs  mod.rs  windows.rs
src/utils/: image.rs
