[package]
name = "capture"
version = "0.1.0"
edition = "2024"

[dependencies]
screencapturekit = "0.3.5"
# windows-capture = "1.4.3"
image = "0.25.6"
display-info = "0.5.4"
anyhow = "1.0.98"


[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.10" }
core-media-rs = { version = "0.3" }
