[package]
name = "capture"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
display-info = "0.5.4"
anyhow = "1.0.98"

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = { git = "https://github.com/qzd1989/windows-capture.git", tag = "v1.0.0" }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3.5"
core-foundation = { version = "0.10" }
core-media-rs = { version = "0.3" }
